feat[swagger]: story browse and add
